<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/image_applogo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/icon_groups_200" />

    <TextView
        android:id="@+id/text_appname"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="140dp"
        android:fontFamily="@font/alba2"
        android:gravity="center"
        android:text="@string/app_name"
        android:textColor="#F44336"
        android:textSize="72sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/image_applogo" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_register_main"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="64dp"
        android:layout_marginEnd="24dp"
        android:text="@string/register"
        android:textAllCaps="false"
        android:textColor="#FFFFFF"
        app:backgroundTint="#F44336"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_appname"
        app:rippleColor="#D32F2F" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_login_main"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="24dp"
        android:text="@string/login"
        android:textAllCaps="false"
        android:textColor="#FFFFFF"
        app:backgroundTint="#F44336"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_register_main"
        app:rippleColor="#D32F2F" />

    <TextView
        android:id="@+id/text_pp_and_tos"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:text="@string/pp_and_tos"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>