<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".EditProfileActivity">

    <ImageButton
        android:id="@+id/button_changephoto"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginTop="32dp"
        android:background="#00FFFFFF"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_camera" />

    <ImageView
        android:id="@+id/current_pp"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginTop="32dp"
        android:alpha="0.2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_edit_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="16dp"
        app:boxStrokeColor="#F44336"
        app:hintTextColor="#F44336"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_changephoto">

        <EditText
            android:id="@+id/edittext_edit_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/name_hint"
            android:inputType="textPersonName"
            android:maxLength="30"
            android:textCursorDrawable="@null" />

    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_edit_school"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        app:boxStrokeColor="#F44336"
        app:hintTextColor="#F44336"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/til_edit_name">

        <com.google.android.material.textfield.MaterialAutoCompleteTextView
            android:id="@+id/edit_school_spinner"
            android:layout_width="match_parent"
            android:layout_height="64dp"
            android:hint="@string/school_hint"
            android:paddingStart="12dp"
            android:paddingTop="12dp"
            android:textCursorDrawable="@null"
            android:textSize="16sp" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_edit_department"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        app:boxStrokeColor="#F44336"
        app:hintTextColor="#F44336"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/til_edit_school">

        <com.google.android.material.textfield.MaterialAutoCompleteTextView
            android:id="@+id/edit_department_spinner"
            android:layout_width="match_parent"
            android:layout_height="64dp"
            android:hint="@string/department_hint"
            android:paddingStart="12dp"
            android:paddingTop="12dp"
            android:textCursorDrawable="@null"
            android:textSize="16sp" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_edit_bio"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        app:boxStrokeColor="#F44336"
        app:hintTextColor="#F44336"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/til_edit_department">

        <EditText
            android:id="@+id/edittext_bio"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_bio"
            android:inputType="textMultiLine"
            android:maxLength="100"
            android:textCursorDrawable="@null" />

    </com.google.android.material.textfield.TextInputLayout>

</androidx.constraintlayout.widget.ConstraintLayout>